--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,18 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-kapt'
+}
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
+    namespace "com.ibashkimi.telegram"
+    compileSdk 34
+
     defaultConfig {
         applicationId "com.ibashkimi.telegram"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
+        minSdkVersion 28
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -22,54 +25,52 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     buildFeatures {
         compose true
     }
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "17"
         freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
     }
     composeOptions {
-        kotlinCompilerVersion "$kotlinVersion"
-        kotlinCompilerExtensionVersion "$compose"
+        kotlinCompilerExtensionVersion '1.4.8'
     }
-}
-
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-    kotlinOptions {
-        jvmTarget = "1.8"
+    buildFeatures {
+        compose true
     }
 }
 
 dependencies {
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(':libtd')
+    implementation 'androidx.appcompat:appcompat:1.6.1'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0-rc01'
-    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
+    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha03'
+    implementation "androidx.core:core-ktx:1.12.0"
 
     implementation "androidx.compose.runtime:runtime:$compose"
-    implementation "androidx.activity:activity-compose:1.3.0-alpha07"
+    implementation "androidx.activity:activity-compose:1.8.1"
     implementation "androidx.compose.ui:ui:$compose"
     implementation "androidx.compose.ui:ui-tooling:$compose"
     implementation "androidx.compose.material:material:$compose"
     implementation "androidx.compose.material:material-icons-extended:$compose"
 
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha10"
-    implementation "androidx.paging:paging-compose:1.0.0-alpha08"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha04"
-    implementation 'com.google.accompanist:accompanist-coil:0.9.0'
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha09"
+    implementation "androidx.paging:paging-compose:3.3.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0-rc01"
+    implementation("io.coil-kt:coil-compose:2.2.2")
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha01'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
+
 }
