--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ buildscript {
         buildToolsVersion = '30.0.3'
         minSdkVersion = 21
         targetSdkVersion = 30
-        kotlinVersion = '1.4.32'
+        kotlinVersion = '1.8.22'
         compose = '1.0.0-beta06'
-        hilt_version = '2.35.1'
+        hilt_version = '2.48'
     }
     repositories {
         google()
@@ -19,16 +19,9 @@ buildscript {
     }
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        maven {
-            url "https://kotlin.bintray.com/kotlinx"
-        }
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+plugins {
+    id("com.android.application") version '8.1.1' apply false
+    id 'com.android.library' version '8.1.1' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id("com.google.dagger.hilt.android") version "2.45" apply false
 }
